Verification finale des fonctionnalites et correction des bugs